Update 2.1 . version.md

--- a/2.1 . version.md
+++ b/2.1 . version.md
@@ -1,5 +1,5 @@
 7.01.5
   - 7 : major update , 01 : minor update , 5: patch update
   - when minor or patch changes , we can shift to that easily , but when major changes it is very difficult to migrate as whole structure , coding practices changes.
-
+When there are major changes then only the first digit is incremented.
 ^ is versions for ex: ^5.2.4 means that our code will automatically change aur auto update to the latest one. if ~ then no auto updates.
